Added the gradle-plugin-plugin to remove boiler-plate code.